--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
 
   <link rel="manifest" href="/manifest.json" crossOrigin="use-credentials">
 
+  <style>
+      .upcoming{
+          background-color: green;
+          color: white;
+      }
+      .upcoming:hover{
+          background-color: green;
+          color: white;
+      }
+  </style>
+
   </head>
 
   <body class="logged-in env-production page-responsive page-profile mine" style="word-wrap: break-word;">
@@ -2464,9 +2475,7 @@
 
 
     <h2 class="f4 text-normal mb-2">
-      814
-      contributions
-        in the last year
+      2021 last year
     </h2>
 
     <div class="border py-2 graph-before-activity-overview">
@@ -2949,15 +2958,14 @@
           <rect width="10" height="10" x="-37" y="65" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-24" data-level="0"></rect>
           <rect width="10" height="10" x="-37" y="78" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-25" data-level="0"></rect>
       </g>
-      <g transform="translate(728, 0)">
-          <rect width="10" height="10" x="-38" y="0" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-26" data-level="1"></rect>
-          <rect width="10" height="10" x="-38" y="13" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-27" data-level="1"></rect>
-          <rect width="10" height="10" x="-38" y="26" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-28" data-level="4"></rect>
-          <rect width="10" height="10" x="-38" y="39" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-29" data-level="1"></rect>
-          <rect width="10" height="10" x="-38" y="52" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-30" data-level="4"></rect>
-          <rect width="10" height="10" x="-38" y="65" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-31" data-level="4"></rect>
-          <rect width="10" height="10" x="-38" y="78" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2022-1-1" data-level="1"></rect>
-      </g>
+      <!-- <g transform="translate(728, 0)">
+          <rect width="10" height="10" x="-38" y="0" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-26" data-level="0"></rect>
+          <rect width="10" height="10" x="-38" y="13" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-27" data-level="0"></rect>
+          <rect width="10" height="10" x="-38" y="26" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-28" data-level="0"></rect>
+          <rect width="10" height="10" x="-38" y="39" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-29" data-level="0"></rect>
+          <rect width="10" height="10" x="-38" y="52" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-30" data-level="0"></rect>
+          <rect width="10" height="10" x="-38" y="65" class="ContributionCalendar-day" rx="2" ry="2" data-count="2022" data-date="2021-12-31" data-level="0"></rect>
+      </g> -->
       <text x="27" y="-7" class="ContributionCalendar-label">Jan</text>
       <text x="92" y="-7" class="ContributionCalendar-label">Feb</text>
       <text x="144" y="-7" class="ContributionCalendar-label">Mar</text>
@@ -2987,23 +2995,54 @@
               Learn how we count contributions</a>
           </div>
           <div class="float-right color-fg-muted" title="A summary of pull requests, issues opened, and commits to the default and gh-pages branches.">
-            Less
+            <svg width="10" height="10" class="d-inline-block">
+              <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+            </svg>
+            <svg width="10" height="10" class="d-inline-block">
+              <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+            </svg>
+            <svg width="10" height="10" class="d-inline-block">
+              <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+            </svg>
               <svg width="10" height="10" class="d-inline-block">
-                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="0"></rect>
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
               </svg>
               <svg width="10" height="10" class="d-inline-block">
-                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="0"></rect>
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
               </svg>
               <svg width="10" height="10" class="d-inline-block">
-                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="0"></rect>
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
               </svg>
               <svg width="10" height="10" class="d-inline-block">
-                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="0"></rect>
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
               </svg>
               <svg width="10" height="10" class="d-inline-block">
-                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="0"></rect>
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
               </svg>
-            More
+              <svg width="10" height="10" class="d-inline-block">
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
+              </svg>
+              <svg width="10" height="10" class="d-inline-block">
+                <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
+              </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
+                </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+                </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+                </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
+                </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="1"></rect>
+                </svg>
+                <svg width="10" height="10" class="d-inline-block">
+                  <rect width="10" height="10" class="ContributionCalendar-day" rx="2" ry="2" data-level="4"></rect>
+                </svg>
           </div>
         </div>
       </div>
@@ -3986,6 +4025,9 @@ api.js (DELETE)
 <div class="d-none d-lg-block">
   <div style="top: 74px;" class="js-profile-timeline-year-list color-bg-default js-sticky " >
     <ul class="filter-list small">
+        <li>
+          <a id="year-link-2022" class="js-year-link filter-item px-3 mb-2 py-2 upcoming" aria-label="Contribution activity in 2021" data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:47807051,&quot;target&quot;:&quot;CONTRIBUTION_YEAR_LINK&quot;,&quot;user_id&quot;:47807051,&quot;originating_url&quot;:&quot;https://github.com/SKR301&quot;}}" data-hydro-click-hmac="1cb28de4e4adedd0b9b6d4bbcb2d719108beb6a5229d6e8407a266d710bf4827" href="/SKR301?tab=overview&amp;from=2021-12-01&amp;to=2021-12-31">2022</a>
+        </li>
         <li>
           <a id="year-link-2021" class="js-year-link filter-item px-3 mb-2 py-2 selected " aria-label="Contribution activity in 2021" data-hydro-click="{&quot;event_type&quot;:&quot;user_profile.click&quot;,&quot;payload&quot;:{&quot;profile_user_id&quot;:47807051,&quot;target&quot;:&quot;CONTRIBUTION_YEAR_LINK&quot;,&quot;user_id&quot;:47807051,&quot;originating_url&quot;:&quot;https://github.com/SKR301&quot;}}" data-hydro-click-hmac="1cb28de4e4adedd0b9b6d4bbcb2d719108beb6a5229d6e8407a266d710bf4827" href="/SKR301?tab=overview&amp;from=2021-12-01&amp;to=2021-12-31">2021</a>
         </li>
