added ToCopy section

--- a/index.html
+++ b/index.html
@@ -2473,7 +2473,7 @@
 </form>  </details-menu>
 </details>
 
-
+<!-- COPY FROM HERE  -->
     <h2 class="f4 text-normal mb-2">
       2021 last year
     </h2>
@@ -3050,6 +3050,7 @@
     </div>
 </div>
 
+<!-- COPY TO HERE  -->
 
     <div class="position-relative" id="user-activity-overview">
       
